# shmistogram

./: .dev_notes  .gitignore  .pre-commit-config.yaml  .r_tests.R  .travis.yml  LICENSE  README.md  demo.Rmd  demo.html  demo.md  demo.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  tox.yml
R-package/: DESCRIPTION  NAMESPACE
R-package/R/: block.R  python.R  shmistogram.R
R-package/man/: SegmentShmistogram.Rd  shmistogram.Rd
R-package/tests/: testthat.R
R-package/tests/testthat/: test_shmistogram.R
demo/: .gitignore  bayesian_blocks.ipynb  binning_comparison.Rmd  binning_comparison.md  binning_methods.ipynb  demo.Rmd  demo.py  detpack_example.R  profiling.ipynb
demo/failure_modes/: bayesian_blocks_spike.Rmd  bayesian_blocks_spike.md
doc/: comparison.py  compile_readme.sh  readme_details.md  readme_preamble.md
doc/chunks/: mixed.py
r_demo/: demo.R  demo.Rmd
shmistogram/: __init__.py  agglomerate.py  kde.py  names.py  plot.py  shmistogram.py  tabulation.py  utils.py
shmistogram/binners/: __init__.py  agglomerate.py  bayesblocks.py  det.py  scalability_testing.py
shmistogram/det/: __init__.py
shmistogram/plot/: __init__.py  bins.py  shmistogrammer.py
shmistogram/simulations/: __init__.py  univariate.py
tests/: test_binning.py  test_readme_example.py  test_tabulation.py
