[project]
name = "shmistogram"
version = "0.6.3"
description = "A smarter histogram"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "astropy >=3.1.2",
  "matplotlib >=3.0.3",
  "pandas >=1.5.0",
  "scipy >=1.2.1",
]

[dependency-groups]
dev = [
  "pre-commit==4.0.1",
  "pyright==1.1.391",
  "ruff==0.8.5",
  "pytest==8.3.4",
]
extras = [
  "jupyter>=1.1.1",
  "ipykernel>=6.29.5",
]

[project.urls]
Source = "https://github.com/zkurtz/shmistogram"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["shmistogram"]

[tool.hatch.build.targets.wheel]
packages = ["shmistogram"]

[tool.pytest.ini_options]
testpaths = ["tests",]

[tool.pyright]
include = ["shmistogram", "tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  # ruff defaults:
  "E4", "E7", "E9", "F",
  "I", # flake8-import-order
  "TID", # flake8-tidy-imports
  "D", # google-style docstrings
]
ignore = [
  "D202", # would require one blank line after the last section of a multi-line docstring
  "D203", # would require one blank line at start of class docstring
  "D213", # would require multi-line docstring to start with a hard return
  "D401", # would require imperative mood in docstring
  "D413", # would put blank line at end of each multiline docstring
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"] # would require module-level documentation
"test_*.py" = ["D"]
